frontend/src/app/layouts/settings-layout/settings-layout.component.scss
h5 {
  color: var(--button-background-color);
}

.setting-layout {
  margin-top: 8%;
  margin-left: 25%;
  position: fixed; /* Responsive */
  width: 20%;
  background-color: white;
  box-shadow: rgba(0,0,0, 0.15) 1px 1px 10px;
  border-radius: 35px;
  max-width: 15%;
  word-wrap: break-word;
}

.profile-sidebar-wrapper {
  position: relative;
  text-align: center;
  height: fit-content;
}

.profile-img {
  width: 28%;
  transform: translateY(-50%);
}

.user-info {
  margin-top: -8%;
}

.link-sidebar {
  margin-top: 15%;
  margin-block-end: 30%;
}

.link-sidebar ul {
  padding:2rem !important;
  margin-bottom: 2.5rem !important;
}

.link-email {
  margin-left: -10%;
}

.link-sidebar li {
  font-size: 20px;
  width: 70%;
  margin-left: 10%;
  margin-bottom: 12%;
}

.link-sidebar a {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-evenly;
  align-items: center;
}

i {
  font-size: 1.2em;
}

.link-sidebar i {
  vertical-align: middle;
}

.btn-group-vertical {
  margin-bottom: 5%;
}

.button-transparent {
  margin: 8% 0;
}

/* Media query for screens up to 1170px */
@media screen and (max-width: 1170px) {
  .link-sidebar ul {
    //example on how to make it mobile
  }

}

.form-group {
  margin-top: 10%;
  margin-bottom: 10%;
  margin-left: 15%;

  width: 70%;
  height: fit-content;
}

.bb-settings-layout-box {
  margin-top: 8%;
  margin-left: 42%;
  position: fixed; /* Responsive */
  width: 50%;
  background-color: white;
  box-shadow: rgba(0,0,0, 0.15) 1px 1px 10px;
  border-radius: 35px;
  max-width: 30%;
  height: inherit;
  word-wrap: break-word;
}

.button-transparent {
  width: 62%;
  margin: 8% 19%;
}

